# yolo-trainer-template

./: .gitignore  .gitlab-ci.yaml  README.md  pyproject.toml
.github/workflows/: ci-pipeline.yaml
assets/: config.yaml
mycustomtrainer/: __init__.py  augment.py  dataset.py  trainer.py
scripts/: train.py
tests/: test_trainer.py
