[tool.poetry]
name = "mycustomtrainer"
version = "0.1.0"
description = ""
authors = ["Daniel García Peña <info@iamdgarcia.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ultralytics = "^8.3.35"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
